--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="desktop1440.css" media="screen and (min-width: 1440px)"/>
     <title>Product preview card component</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -39,7 +40,11 @@
   </head>
   <body>
     <div class="product-container">
-      <img src="images/image-product-mobile.jpg" alt="" />
+      <picture>
+        <source media="(min-width:1440px)" srcset="images/image-product-desktop.jpg">
+        <img src="images/image-product-mobile.jpg" alt="" />
+      </picture>
+      
       <div class="product-details">
         <p class="product-details__category">Perfume</p>
         <h2>Gabrielle Essence Eau De Parfum</h2>
@@ -54,11 +59,6 @@
         <button>Add to Cart</button>
       </div>
     </div>
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    
   </body>
 </html>
